--- a/src/app/borrow-page/borrow-page.component.html
+++ b/src/app/borrow-page/borrow-page.component.html
@@ -57,7 +57,7 @@
             (click)="toUnimplemented()">
     </div>
 
-    <div class="book-card">
+    <div class="book-card" (click)="saveFilter()">
         <img class="book-img" src="assets\gray2.jpg" alt="The image for 'Diary of a Wimpy kid'">
         <div class="book-details">
             <p class="title"><b>The Picture of Dorian Gray</b></p>
