--- a/src/app/buy-filters/buy-filters.component.html
+++ b/src/app/buy-filters/buy-filters.component.html
@@ -35,5 +35,5 @@
         <input type="checkbox" id="personal-delivery" name="personal-delivery">
         <label class="checkbox-text" for="personal-delivery">In person exchange</label>
     </div>
-    <button class="btn btn-primary" (click)="saveFilter()">Save</button>
+    <button class="btn btn-light" (click)="saveFilter()">Save</button>
 </div>
