--- a/src/app/buy-page-with-title/buy-page-with-title.component.html
+++ b/src/app/buy-page-with-title/buy-page-with-title.component.html
@@ -37,8 +37,8 @@
 
     <p class="text-purpose">To buy</p>
 
-    <div class="first-book-card">
-        <img class="book-img" src="assets\diary2.jpg" alt="The image for 'Diary of a Wimpy kid'">
+    <div class="first-book-card" (click)="saveFilter()">
+        <img class="book-img" src="assets\diary2.jpg" alt="The image for 'Diary of a Wimpy kid'" >
         <div class="book-details">
             <p class="title"><b>Diary of a Wimpy Kid</b></p>
             <p class="price">€8</p>
