--- a/src/app/borrow-page-with-title/borrow-page-with-title.component.html
+++ b/src/app/borrow-page-with-title/borrow-page-with-title.component.html
@@ -58,7 +58,7 @@
 
     <p class="text-purpose">To borrow</p>
 
-    <div class="book-card">
+    <div class="book-card" (click)="saveFilter()">
         <img class="book-img" src="assets\gray2.jpg" alt="The image for 'Diary of a Wimpy kid'">
         <div class="book-details">
             <p class="title"><b>The Picture of Dorian Gray</b></p>
