--- a/src/app/buy-filters/buy-filters.component.css
+++ b/src/app/buy-filters/buy-filters.component.css
@@ -44,6 +44,10 @@ button {
     align-content: center;
     width: 70px;
     align-self: center;
+    background-color: #01001b;
+    color: white;
+    font-family: monospace;
+    font-size: 16px;
 }
 
 .icon {
