--- a/src/app/buy-page/buy-page.component.css
+++ b/src/app/buy-page/buy-page.component.css
@@ -66,6 +66,7 @@
     margin-top: 5px;
     border-radius: 5px;
     margin-left: 50px;
+    box-shadow: 0 5px 10px 0 rgba(0, 0, 0, 0.2);
 }
 
 .book-card {
