--- a/src/app/give-book/give-book.component.css
+++ b/src/app/give-book/give-book.component.css
@@ -17,11 +17,13 @@
   display: flex;
   justify-content: center;
   align-items: center;
-  background: gainsboro;
+  border: 3px solid #2d2d2d;
+  color: #000000;
 }
 
 .active {
-  background: #01001b;
+  background: #2d2d2d;
+  color: white;
 }
 
 .step-title {
@@ -32,7 +34,7 @@
   width: 10vw;
   flex-grow: 1;
   height: 4px;
-  background: gainsboro;
+  background: #5b5a5a;
   margin-bottom: 30px;
 }
 .col {
