--- a/src/app/give-book/give-book.component.html
+++ b/src/app/give-book/give-book.component.html
@@ -8,7 +8,7 @@
     <div class="d-flex justify-content-center">
       <div class="d-flex align-items-center" *ngFor="let step of steps; let index = index">
         <div class="step">
-          <div class="step-circle" [class.active]="step.number <= stepIndex">{{step.number}}</div>
+          <div class="step-circle" [class.active]="step.number === stepIndex">{{step.number}}</div>
           <div class="step-title">{{step.title}}</div>
         </div>
         <div *ngIf="index !== steps.length - 1" class="line"></div>
