--- a/src/app/give-book/description/description.component.html
+++ b/src/app/give-book/description/description.component.html
@@ -105,7 +105,7 @@
     </select>
   </div>
 
-  <div class="mt-3">
+  <div class="mt-3 text-center">
     <button class="btn btn-dark">Next</button>
   </div>
 
